# console-cmake-debugger

./: CMakeLists.txt  README.md  main.cpp
breakpoint_subprocess/: CMakeLists.txt  main.cpp
cmake_utils/: debugger_utils.cmake
config/: config.ini
debugger/: CMakeLists.txt
debugger/include/: debugger.h
debugger/src/: debugger.cpp
debugger_subprocess/: CMakeLists.txt  main.cpp
initialization_file_parser/: CMakeLists.txt
initialization_file_parser/include/: initialization_file_parser.h
initialization_file_parser/src/: initialization_file_parser.cpp
shared_memory_state/: CMakeLists.txt
shared_memory_state/include/: shared_memory_state.h
shared_memory_state/src/: shared_memory_state.cpp
